Class added for the spinner object. Now his position is relative and we can move it. The z-index has also been added to fix an error of overlapping other elements.

--- a/finerleague-web/src/app/app.component.css
+++ b/finerleague-web/src/app/app.component.css
@@ -3,9 +3,18 @@
   flex-direction: column;
 }
 
+:host ftc-spinner {
+  position: fixed;
+  width: 7rem;
+  z-index: 1;
+  top: 24%;
+  left: 1.5%;
+}
+
 :host ftc-nav {
   position: fixed;
   width: 7rem;
+  z-index: 1;
   top: 30%;
 }
 
